# OpenPhase

./: .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  COPYRIGHT  INSTALL  Makefile  Makefile.defs  OpenPhaseBuildH5.sh  README.md  System-requirements
benchmarks/: CMakeLists.txt  Makefile
benchmarks/AnisotropyTest/: AnisotropyTest.cpp  CMakeLists.txt  Readme.md
benchmarks/ElasticForceDensityTest/: CMakeLists.txt  ElasticForceDensityTest.cpp
benchmarks/EshelbyTest/: CMakeLists.txt  EshelbyTest.cpp
benchmarks/GPAdvectionTest/: CMakeLists.txt  GPAdvectionTest.cpp  Makefile
benchmarks/GPWangSolidSolidTest/: CMakeLists.txt  GPWangSolidSolidTest.cpp
benchmarks/InterfaceDiffusionJunction/: CMakeLists.txt  InterfaceDiffusionJunction.cpp
benchmarks/InterfaceDiffusionVolumeConservation/: CMakeLists.txt  InterfaceDiffusionVolumeConservation.cpp
benchmarks/LBCapillaryBridge/: CMakeLists.txt  LBCapillaryBridge.cpp  LocalLBM.h
benchmarks/LBGravity/: CMakeLists.txt  LBGravity.cpp
benchmarks/LinearSystemSolver/: CMakeLists.txt  LinearSystemSolver.cpp
benchmarks/MagnetoactiveElastomerLinear/: CMakeLists.txt  MagnetoactiveElastomerLinear.cpp
benchmarks/MultiJunction2D/: CMakeLists.txt  MultiJunction.txt  MultiJunction2D.cpp  README
benchmarks/MultiJunction3D/: CMakeLists.txt  MultiJunction.txt  MultiJunction3D.cpp
benchmarks/SingleGrain/: CMakeLists.txt  README  SingleGrain.cpp  SingleGrain.txt
benchmarks/SingleGrainInterfaceStressTest/: CMakeLists.txt  SingleGrainStressTest.cpp
benchmarks/SolidificationAlCu/: CMakeLists.txt  README.md  SolidificationAlCu.cpp  post-crop.sh  post-render.py  post-video.sh  post.sh
benchmarks/YoungsLaw/: Makefile  ProjectInput.opi  README  YoungsLaw.cpp  YoungsLaw.txt
examples/: CMakeLists.txt  Makefile
examples/AdditiveNiAl/: AdditiveNiAl.cpp  ProjectInput.opi
examples/EutecticII/: EutecticII.cpp  ProjectInput.opi  README
examples/FacetedGG/: FacetedGG.cpp  FacetedGG.txt  ProjectInput.opi  README
examples/Flow/: CMakeLists.txt  Flow.cpp  ProjectInput.opi
examples/Foam/: Foam.cpp  ProjectInput.opi
examples/HeatDiffusion/: HeatDiffusion.cpp  ProjectInput.opi
examples/LatentHeat/: LatentHeat.cpp  Makefile  ProjectInput.opi
examples/LiquidPhaseSintering/: CMakeLists.txt  LiquidPhaseSintering.cpp  ProjectInput.opi
examples/LiquidPhaseSinteringLarge/: CMakeLists.txt  LiquidPhaseSinteringLarge.cpp  ProjectInput.opi  README.md
examples/MeltingFe/: MeltingFe.cpp  ProjectInput.opi  README
examples/NormalGG/: NormalGG.cpp  NormalGG.txt  README
examples/Pearlite/: CMakeLists.txt  Pearlite.cpp  ProjectInput.opi  README
examples/Plagioclase/: Plagioclase.cpp  ProjectInput.opi
examples/PrecipitationNiTi/: PrecipitationNiTi.cpp  ProjectInput.opi  Readme
examples/ReactiveFlow/Flame0D/: CMakeLists.txt  Flame0D.cpp  Makefile  ProjectInput.opi  SettingsInput.opi
examples/ReactiveFlow/FlamePackedBed-SFB287-A3Geom/: CMakeLists.txt  FlamePB2D-A3.cpp  ProjectInput.opi  SettingsInput.opi  cylindersData.txt
examples/ReactiveFlow/FlamePackedBed2D/: CMakeLists.txt  FlamePB2D.cpp  ProjectInput.opi  SettingsInput.opi  cylindersData.txt
examples/ReactiveFlow/FlameSpeed1D/: CMakeLists.txt  Flame1D.cpp  (+3 more)
examples/SolidPhaseSintering/: CMakeLists.txt  Makefile  ProjectInput.opi  README.md  SolidPhaseSintering.cpp
examples/SolidPhaseSintering_SurfaceDiffusion/: ProjectInput.opi  SolidPhaseSintering.cpp
examples/SolidificationFe/: ProjectInput.opi  README  SolidificationFe.cpp
examples/SolidificationFeC/: ProjectInput.opi  README  SolidificationFeC.cpp
examples/SolidificationMgAl/: ProjectInput.opi  ProjectInputPocket.opi  SolidificationMgAl.cpp  SolidificationMgAldendrite.cpp
examples/SolidificationNiAl/: ProjectInput.opi  README  SolidificationNiAl.cpp
examples/Superalloys/: ProjectInput.opi  Superalloys.cpp
examples/Wetting/: CMakeLists.txt  ProjectInput.opi  README.md  Wetting.cpp
mpi_wrapper/: CMakeLists.txt  Makefile  mpi_wrapper.cpp  mpi_wrapper.h
(+227 files in other folders)
