add_subdirectory(AnisotropyTest)
add_subdirectory(ElasticForceDensityTest)
add_subdirectory(EshelbyTest)
add_subdirectory(GPAdvectionTest)
add_subdirectory(GPWangSolidSolidTest)
add_subdirectory(InterfaceDiffusionJunction)
add_subdirectory(InterfaceDiffusionVolumeConservation)
add_subdirectory(LBCapillaryBridge)
add_subdirectory(LBGravity)
add_subdirectory(LinearSystemSolver)
add_subdirectory(MagnetoactiveElastomerLinear)
add_subdirectory(MultiJunction2D)
add_subdirectory(MultiJunction3D)
add_subdirectory(SingleGrain)
add_subdirectory(SingleGrainInterfaceStressTest)
add_subdirectory(SolidificationAlCu)
