#add_subdirectory(Flow)
add_subdirectory(LiquidPhaseSintering)
add_subdirectory(LiquidPhaseSinteringLarge)
#add_subdirectory(Pearlite)
add_subdirectory(SolidPhaseSintering)
#add_subdirectory(Superalloys)
add_subdirectory(Wetting)


if (CANTERA_FOUND)
    add_subdirectory(ThermalCompressibleFlow/PackedBed2D)
    add_subdirectory(ThermalCompressibleFlow/CylinderFlow)
    add_subdirectory(ThermalCompressibleFlow/PoiseuilleFlow)
    add_subdirectory(ReactiveFlow/Flame0D)
    add_subdirectory(ReactiveFlow/FlameSpeed1D)
    add_subdirectory(ReactiveFlow/FlameWall2D)
    add_subdirectory(ReactiveFlow/FlamePackedBed2D)
    add_subdirectory(ReactiveFlow/FlamePackedBed-SFB287-A3Geom)
endif()
